kubernetes/infrastructure/cloudflared/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudflared
  namespace: cloudflared
  labels:
    app.kubernetes.io/name: cloudflared
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cloudflared
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "2000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: region1.v2.argotunnel.com
        - matchName: region2.v2.argotunnel.com
      toPorts:
        - ports:
            - port: "7844"
              protocol: UDP
            - port: "7844"
              protocol: TCP
    - toCIDRSet:
        - cidr: 198.41.192.7/32
        - cidr: 198.41.192.27/32
        - cidr: 198.41.192.37/32
        - cidr: 198.41.192.47/32
        - cidr: 198.41.192.57/32
        - cidr: 198.41.192.67/32
        - cidr: 198.41.192.77/32
        - cidr: 198.41.192.107/32
        - cidr: 198.41.192.167/32
        - cidr: 198.41.192.227/32
        - cidr: 198.41.200.13/32
        - cidr: 198.41.200.23/32
        - cidr: 198.41.200.33/32
        - cidr: 198.41.200.43/32
        - cidr: 198.41.200.53/32
        - cidr: 198.41.200.63/32
        - cidr: 198.41.200.73/32
        - cidr: 198.41.200.113/32
        - cidr: 198.41.200.193/32
        - cidr: 198.41.200.233/32
      toPorts:
        - ports:
            - port: "7844"
              protocol: UDP
            - port: "7844"
              protocol: TCP
    - toCIDRSet:
        - cidr: 10.20.30.200/32
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toCIDRSet:
        - cidr: 10.20.30.50/32
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toServices:
        - k8sService:
            namespace: gateway-system
            serviceName: cilium-gateway-internal
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
